# website

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.toml  go.mod  go.sum  netlify.toml
.claude/: settings.local.json
archetypes/: episodes.md
content/: _index.md  about.md
content/episodes/: 001-infrastructure-as-code.md  002-gitops.md  003-docker-secure-build.md  004-docker-runtime-security.md  005-what-are-we-working-on.md  006-semver-or-not-to-semver.md  007-how-do-we-learn.md  008-devops-what.md  009-terraform-in-ci.md  010-are-we-wrong-about-terragrunt.md  011-aws-security-maturity-roadmap.md  012-scale-vs-scaling.md  013-all-you-need-to-know-about-setting-up-hashicorp-vault.md  014-theory-of-constraint.md  015-remote-work-security.md  016-do-you-need-a-staging-environment.md  017-best-practices-for-building-docker-images.md  018-hashiconf-special.md  019-deleting-resources-in-the-cloud.md  020-monitoring-done-wrong.md  021-surviving-aws-outage.md  022-who-are-mattias-julien-and-andrey.md  023-run-kubernetes-cloud.md  (+160 more)
public/: index.html  index.json  index.xml  searchindex.json  sitemap.xml
resources/: DSO_LOGO.xcf
tools/: .env  .gitignore  README.md  article.py  do.sh  episode.md.j2  episode_pipeline.py  podbean.py  podcast-context.md  pyproject.toml  r2_staging.py  requirements.txt  seed_progress_markers.py  setup.sh  transcribe.py  upload_progress.py  writing-style.md  youtube.py
tools/prompts/: descriptions.md  draft.md  review.md  revise.md  titles.md
tools/raw/: .gitignore
tools/tests/: test_podcast_helpers.py
(+57 files in other folders)
